fix: set page min scale + add overflow

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
 body {
     display: block;
     max-width: 1024px;
+    min-width: 700px;
     margin: auto;
 
     font-family: Cabin, sans-serif;
@@ -134,6 +135,9 @@ main {
 .aside-container #contacts ul {
     list-style: none;
     padding: 0;
+}
+.aside-container #skills .parent-ul {
+    overflow: auto;
 }
 .aside-container section {
     border-radius: 1rem;
